url overflow fix

--- a/app/assets/stylesheets/dcv/dcv.css.scss
+++ b/app/assets/stylesheets/dcv/dcv.css.scss
@@ -652,6 +652,7 @@ h2[itemprop="name"] {
   }
   dd {
     margin:5px 0px;
+    word-wrap:break-word;
   }
 }
 
@@ -707,6 +708,10 @@ h2[itemprop="name"] {
   .search-index-tool-group {
     margin-left:5px;
   }
+}
+
+#search-results ul li {
+  word-wrap:break-word;
 }
 
 @font-face {
